<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="@color/maincolor"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/setting"/>
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="30dp"
        android:background="@color/margin"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#616161"
            android:gravity="bottom"
            android:paddingBottom="5dp"
            android:text="@string/setting_alarm"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/pushAlarm"
            android:layout_marginLeft="30dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:textSize="15dp"
            android:text="@string/push"/>
            <Switch
                android:shadowColor="@color/maincolor"
                android:id="@+id/switch_notification"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/margin">
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/couponAlarm"
            android:layout_marginLeft="30dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:textSize="15dp"
            android:text="@string/coupon"/>
        <Switch
            android:id="@+id/switch_notification2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="30dp"
        android:background="@color/margin"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#616161"
            android:gravity="bottom"
            android:paddingBottom="5dp"
            android:text="@string/version_1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/version"
            android:layout_marginLeft="30dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:textSize="15dp"
            android:text="@string/version_2"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="right"
            android:layout_marginRight="10dp"
            android:text="1.0.0"/>
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="30dp"
        android:background="@color/margin"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#616161"
            android:gravity="bottom"
            android:paddingBottom="5dp"
            android:text="@string/anounce"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/clause"
            android:layout_marginLeft="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:textSize="15dp"
            android:text="@string/anounce_2"/>
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="30dp"
        android:background="@color/margin"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#616161"
            android:gravity="bottom"
            android:paddingBottom="5dp"
            android:text="@string/question"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/inquire"
            android:layout_marginLeft="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:textSize="15dp"
            android:text="@string/question_2"/>
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="30dp"
        android:background="@color/margin"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#616161"
            android:gravity="bottom"
            android:paddingBottom="5dp"
            android:text="@string/account"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/logout"
            android:layout_marginLeft="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:textSize="15dp"
            android:text="@string/logout"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/margin">
    </LinearLayout>
</LinearLayout>