<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scroll_view_my_tab03_reserv">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp">
        <LinearLayout
            android:id="@+id/link_btn"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_width="150dp"
            android:layout_height="50dp">


        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="250dp"
            android:layout_height="350dp">
            <LinearLayout
                android:paddingTop="10dp"
                android:orientation="vertical"
                android:elevation="1dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="280dp">
                <LinearLayout
                    android:paddingTop="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/lineup"/>
                        <TextView
                            android:id="@+id/resrv_rname"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/sample_name"
                            android:gravity="center"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            android:textColor="@color/black"/>
                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="20dp">
                    <TextView
                        android:id="@+id/resrv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:text="2015.10.16 13:27"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="80dp">
                    <TextView
                        android:id="@+id/people_left"
                        android:textSize="70dp"
                        android:textColor="@color/maincolor"
                        android:text="07"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:paddingTop="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="30dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rev_name"
                        android:textColor="@color/black"
                        android:textSize="15dp"/>
                    <TextView
                        android:id="@+id/resrv_name"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample"
                        android:textColor="@color/black"
                        android:textSize="15dp"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="30dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rev_num"
                        android:textColor="@color/black"
                        android:textSize="15dp"/>
                    <TextView
                        android:id="@+id/resrv_party"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2"
                        android:textColor="@color/black"
                        android:textSize="15dp"/>
                </LinearLayout>
                <LinearLayout
                    android:paddingBottom="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="30dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/waitingtime"
                        android:textColor="@color/black"
                        android:textSize="15dp"/>
                    <TextView
                        android:id="@+id/time_left"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="60"
                        android:textColor="@color/black"
                        android:textSize="15dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min"
                        android:textColor="@color/black"
                        android:textSize="15dp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:paddingRight="50dp"
                android:paddingLeft="50dp"
                android:paddingBottom="5dp"
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="70dp">
                <RelativeLayout
                    android:id="@+id/cancel_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/lineup"/>
                    <TextView
                        android:id="@+id/cancel_btn"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/cancel"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>