<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/resinfo_frame"
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <ImageView
            android:id="@+id/res_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="180dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="신촌"
                android:gravity="center_horizontal"
                android:textColor="#BDBDBD"/>
            <TextView
                android:id="@+id/res_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold"
                android:text="아웃백 스테이크"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="60dp">

            <RelativeLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/add_star_click"/>
                <ImageView
                    android:src="@drawable/star"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="35dp"
                    android:id="@+id/star"/>
                <TextView
                    android:layout_toRightOf="@+id/star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/maincolor"
                    android:text="3.0"
                    android:textSize="18dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/add_star"
                    android:layout_marginRight="20dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_star"
                    android:textColor="@color/white_disabled"
                    android:textSize="15dp"/>
                <TextView
                    android:id="@+id/num_people"
                    android:layout_marginRight="35dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:layout_toLeftOf="@+id/add_star"
                    android:text="@string/n"/>
                <TextView
                    android:layout_marginRight="2dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:layout_toLeftOf="@+id/num_people"
                    android:text="N"/>
            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_horizontal">
            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="center">
                <RelativeLayout
                    android:id="@+id/lineup_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lineup"
                    android:gravity="center"
                    android:textColor="@color/black">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/line_up"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/lineup"
                        android:gravity="center"
                        android:textSize="10dp"
                        android:textStyle="bold"/>
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>
</LinearLayout>